[package]
name = "stevedore"
version = "0.12.0"
description = "Docker distribution for Windows that Just Works"
edition = "2021"
authors = ["Marat Radchenko <marat@slonopotamus.org>"]
homepage = "https://github.com/slonopotamus/stevedore"
repository = "https://github.com/slonopotamus/stevedore.git"
license = "Apache-2.0"

[build-dependencies]
const_format = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
zip = "0.6"
