[package]
name = "stevedore"
version = "2.2.1"
description = "Docker distribution for Windows that Just Works"
edition = "2021"
authors = ["Marat Radchenko <marat@slonopotamus.org>"]
homepage = "https://github.com/slonopotamus/stevedore"
repository = "https://github.com/slonopotamus/stevedore.git"
license = "Apache-2.0"

[build-dependencies]
const_format = "0.2"
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
tar = "0.4"
zip = "2.1"
